# Angry-birds-clone

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md
libs/: readme.md
libs/FLAC/: libFLAC++.so.10.0.1  libFLAC.so.12.1.0
libs/box2d/lib/: libbox2d.lib
src/: main.cpp
src/Assets/Levels/: level1.txt  level2.txt  level3.txt
src/Assets/Sounds/: Fly.wav:Zone.Identifier  Level_complete.wav:Zone.Identifier  Level_failed.wav:Zone.Identifier  Oink.wav:Zone.Identifier  Pig_destroyed.wav:Zone.Identifier  Select.wav:Zone.Identifier  Shoot.wav:Zone.Identifier  Theme.wav:Zone.Identifier  Wood_destroyed.wav:Zone.Identifier
src/Core/: AssetLoader.cpp  AssetLoader.h  ContactListener.cpp  ContactListener.h  DebugDraw.cpp  DebugDraw.h  Game.cpp  Game.h  GameEvent.cpp  GameEvent.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Score.cpp  Score.h
src/Entities/: BirdPreview.cpp  BirdPreview.h  Birds.cpp  Birds.h  Enemy.cpp  Enemy.h  Entities.cpp  Entities.h  Ground.cpp  Ground.h  Obstacles.cpp  Obstacles.h  Slingshot.cpp  Slingshot.h  SpriteEntity.cpp  SpriteEntity.h  Vector2.cpp  Vector2.h
src/Level/: level.cpp  level.hpp  leveldata.cpp  leveldata.hpp
src/UI/: CompletedMenu.cpp  CompletedMenu.h  HUD.cpp  HUD.h  MainMenu.cpp  MainMenu.h  UIButton.cpp  UIButton.h  UIButtonBuilder.cpp  UIButtonBuilder.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIImageBuilder.cpp  UIImageBuilder.h  UIManager.cpp  UIManager.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h  UITextBuilder.cpp  UITextBuilder.h
src/include/: readme.md
